--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RoomRoster</title>
-  </head>
-  <body>
-    <h3>All Listings</h3>
-    <form method="GET" action="/listings/new">
+<% layout("/layouts/boilerplate.ejs") %>
+<h3>All Listings</h3>
+<!-- <form method="GET" action="/listings/new">
       <button>Create new listings</button>
-    </form>
-    <ul>
-      <% for(let listing of allListings){ %>
-      <li><a href=" /listings/<%= listing._id%>"><%= listing.title %></a></li>
-      <% } %>
-    </ul>
-  </body>
-</html>
+    </form> -->
+<div class="row row-cols-lg-3 row-cols-md-3 mt-3 row-cols-sm-1">
+  <% for(let listing of allListings){ %>
+  <a href="/listings/<%= listing._id%>" class="listing-link">
+    <div class="card col">
+      <img
+        src="<%=listing.image %>"
+        class="card-img-top"
+        alt="listing_image"
+        style="height: 20rem"
+      />
+
+      <div class="card-body">
+        <p class="card-text">
+          <b><%= listing.title %></b> <br />
+          <%= listing.price.toLocaleString("en-IN") %> / night
+        </p>
+      </div>
+    </div>
+  </a>
+  <% } %>
+</div>
