--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -6,7 +6,12 @@
     <h3>Edit your Listing</h3>
     <br />
 
-    <form method="POST" action="/listings/<%= listing._id%>?_method=PUT">
+    <form
+      method="POST"
+      action="/listings/<%= listing._id%>?_method=PUT"
+      novalidate
+      class="needs-validation"
+    >
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input
@@ -14,14 +19,17 @@
           value="<%=listing.title%>"
           type="text"
           class="form-control"
+          required
         />
+        <div class="valid-feedback">Title looks good!</div>
       </div>
 
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
-        <textarea name="listing[description]" class="form-control">
+        <textarea name="listing[description]" class="form-control" required>
 <%=listing.description%></textarea
         >
+        <div class="invalid-feedback">Please enter a short description</div>
       </div>
 
       <div class="mb-3">
@@ -31,7 +39,9 @@
           value="<%=listing.image %>"
           type="text"
           class="form-control"
+          required
         />
+        <div class="invalid-feedback">Enter valid image url</div>
       </div>
 
       <div class="row">
@@ -42,7 +52,9 @@
             value="<%=listing.price%>"
             type="number"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Price should be valid</div>
         </div>
 
         <div class="mb-3 col-md-8">
@@ -52,7 +64,9 @@
             value="<%=listing.country%>"
             type="text"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Country name should be valid</div>
         </div>
       </div>
 
@@ -63,7 +77,9 @@
           value="<%=listing.location%>"
           type="text"
           class="form-control"
+          required
         />
+        <div class="invalid-feedback">Location should be valid</div>
       </div>
 
       <button class="btn btn-dark edit-btn mt-3">Edit</button>
