--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,12 +1,10 @@
 <% layout("/layouts/boilerplate.ejs") %>
 <h3>All Listings</h3>
-<!-- <form method="GET" action="/listings/new">
-      <button>Create new listings</button>
-    </form> -->
+
 <div class="row row-cols-lg-3 row-cols-md-3 mt-3 row-cols-sm-1">
   <% for(let listing of allListings){ %>
   <a href="/listings/<%= listing._id%>" class="listing-link">
-    <div class="card col">
+    <div class="card col listing-card">
       <img
         src="<%=listing.image %>"
         class="card-img-top"
