SignUp & Login Functionality

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -33,7 +33,9 @@
     <!-- connecting to navbar -->
     <%- include("../includes/navbar.ejs") %>
 
-    <div class="container"><%- body %></div>
+    <div class="container">
+      <%- include("../includes/flash.ejs") %> <%- body %>
+    </div>
 
     <!-- connecting footer -->
     <%- include("../includes/footer.ejs") %>
