--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <!-- this link is for font awasome cdn so that icon can be used -->
+    <!-- this link is for font awesome cdn so that icon can be used -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
