--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -17,6 +17,14 @@
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Add New Listing</a>
       </div>
+      <div class="navbar-nav ms-auto">
+        <% if(!currUser) { %>
+        <a class="nav-link active" href="/signup">Sign Up</a>
+        <a class="nav-link" href="/login">Log In</a>
+        <% } %> <% if(currUser) { %>
+        <a class="nav-link" href="/logout">Log Out</a>
+        <% } %>
+      </div>
     </div>
   </div>
 </nav>
