--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -72,10 +72,11 @@
           class="form-control"
           required
         />
-        <div class="invalid-feedback">Location should be valid</div>
+        <div class="invalid-feedback">Price should be valid</div>
       </div>
-
-      <button class="btn btn-dark add-btn mt-3">Add</button>
+      <div class="mb-3">
+        <button class="btn btn-dark add-btn mt-3 mb-3">Add</button>
+      </div>
     </form>
   </div>
 </div>
