--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -11,17 +11,19 @@
       alt="listing_image"
     />
     <div class="card-body">
+      <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+      <p class="card-text"><%= listing.description %></p>
       <p class="card-text">
-        <%= listing.description %> <br />
-        &#8377; <%= listing.price.toLocaleString("en-IN") %> <br />
-        <%= listing.location %> <br />
-        <%= listing.country %>
+        &#8377; <%= listing.price.toLocaleString("en-IN") %>
       </p>
+      <p class="card-text"><%= listing.location %></p>
+      <p class="card-text"><%= listing.country %></p>
     </div>
   </div>
 
   <br />
 
+  <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
   <div class="btns">
     <a
       href="/listings/<%= listing._id%>/edit"
@@ -31,10 +33,12 @@
     <form method="POST" action="/listings/<%=listing._id %>?_method=DELETE">
       <button class="btn btn-dark offset-5">Delete</button>
     </form>
+    <hr />
   </div>
+  <% } %>
 
   <div class="col-8 offset-3 mb-3">
-    <hr />
+    <% if(currUser) { %>
     <h4>Leave a Review</h4>
     <form
       action="/listings/<%=listing._id%>/reviews"
@@ -67,15 +71,15 @@
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
-
     <hr />
+    <% }%>
 
     <p><b>All Reviews</b></p>
     <div class="row">
       <% for(review of listing.review){ %>
       <div class="card col-5 ms-3 mb-3">
         <div class="card-body">
-          <h5 class="card-title">James</h5>
+          <h5 class="card-title">@<%=review.author.username %></h5>
           <div class="card-text"><%=review.comment %></div>
           <div class="card-text"><%=review.rating %> stars</div>
           <form
