--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,12 +1,18 @@
 <% layout("/layouts/boilerplate") %>
-<div class="row mt-3">
-  <div class="col-8 offset-2">
+<div class="row mt-3 newform">
+  <div class="col-8 offset-2" id="all">
     <h3>Create a New Listing</h3>
     <br />
 
-    <form method="POST" action="/listings" novalidate class="needs-validation">
+    <form
+      method="POST"
+      action="/listings"
+      novalidate
+      class="needs-validation"
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
+        <label for="title" class="form-label"><b>Title</b></label>
         <input
           name="listing[title]"
           placeholder="enter title"
@@ -18,7 +24,7 @@
       </div>
 
       <div class="mb-3">
-        <label for="description" class="form-label">Description</label>
+        <label for="description" class="form-label"><b>Description</b></label>
         <textarea
           name="listing[description]"
           class="form-control"
@@ -28,18 +34,17 @@
       </div>
 
       <div class="mb-3">
-        <label for="image" class="form-label">Image</label>
+        <label for="image" class="form-label"><b>Image</b></label>
         <input
           name="listing[image]"
-          placeholder="enter image URL/Link"
-          type="text"
+          type="file"
           class="form-control"
         />
       </div>
 
       <div class="row">
         <div class="mb-3 col-md-4">
-          <label for="price" class="form-label">Price</label>
+          <label for="price" class="form-label"><b>Price</b></label>
           <input
             name="listing[price]"
             placeholder="enter price"
@@ -51,7 +56,7 @@
         </div>
 
         <div class="mb-3 col-md-8">
-          <label for="country" class="form-label">Country</label>
+          <label for="country" class="form-label"><b>Country</b></label>
           <input
             name="listing[country]"
             placeholder="enter country"
@@ -64,7 +69,7 @@
       </div>
 
       <div class="mb-3">
-        <label for="location" class="form-label">Location</label>
+        <label for="location" class="form-label"><b>Location</b></label>
         <input
           name="listing[location]"
           placeholder="enter location"
