--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -25,6 +25,7 @@
           class="form-control"
           required
         />
+        <div class="valid-feedback">looks good!!</div>
       </div>
 
       <div class="mb-3">
@@ -36,6 +37,7 @@
           class="form-control"
           required
         />
+        <div class="valid-feedback">password looks strong!!</div>
       </div>
       <button class="btn btn-success">SignUp</button>
     </form>
